web-api/web-api-deloyment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-api
  labels:
    app: web-api
spec:
  replicas: 3 
  selector:
    matchLabels:
      app: web-api
  template:
    metadata:
      labels:
        app: web-api
        spec:
          containers:
          - name: web-api
            image: web-api:v1
            ports:
            - containerPort: 1337
