web-api/web-api-network.yml
apiVersion: v1
kind: Service
metadata:
  name: web-api-service
spec:
  type: NodePort
  selector:
    app: web-api
  ports:
    - port: 1337
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-api-ingress
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules: 
  - host: example.org
  http:
    paths:
      - path: /
        backend:
          serviceName: web-api-service
          servicePort: 1337
